cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_383.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/ssl_lib.c:488: error: DEAD_STORE
  The value written to &max_version (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/ssl_lib.c:488:13: Write of unused value
486.               min_version = DTLS1_VERSION;
487.           if (max_version == 0)
488.               max_version = DTLS1_2_VERSION;
                   ^
489.   #ifdef OPENSSL_NO_DTLS1_2
490.           if (max_version == DTLS1_2_VERSION)
